--- a/MCQ/MCQ.css
+++ b/MCQ/MCQ.css
@@ -1,3 +1,53 @@
-h1{
+*{
+    margin: 0;
+    padding: 0;
+}
 
+#a{
+    border: 3px solid red;
+    padding: 10px;
+}
+#b{
+    text-align: center;
+    background-color: blue;
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+#c{
+    width: 900px;
+    border: 1px solid black;
+    padding: 20px;
+    background-color: white;
+    margin: 60px auto;
+    border-radius: 10px;
+}
+
+.q{
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid black;
+    background-color: lightblue;
+    margin: 10px;
+}
+
+#fixed{
+    padding: 10px;
+    bottom: 20px;
+    right: 20px;
+    border-radius: 10px;
+    border: 1px solid black;
+    background-color: blue;
+    position: fixed;
+    color: white;
+    font-size: 15px;
+}
+
+.z{
+    padding: 30px;
+    background-color: lightgoldenrodyellow;
+    margin: 30px;
+    width: 200px;
+    border: 3px solid black;
 }
