--- a/HTML/Flex-Box/flexbox.css
+++ b/HTML/Flex-Box/flexbox.css
@@ -136,6 +136,8 @@ h1{
 .flexContainer11{
     border: 1px solid black;
     display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .alignself:nth-child(1){
@@ -145,7 +147,6 @@ h1{
     border: 1px solid black;
     background-color: rgb(152, 218, 218);
     align-self: flex-start;
-    justify-items: flex-start;
 }
 
 .alignself:nth-child(2){
@@ -155,7 +156,6 @@ h1{
     border: 1px solid black;
     background-color: rgb(152, 218, 218);
     align-self: center;
-    justify-items: center;
 }
 
 .alignself:nth-child(3){
@@ -165,5 +165,4 @@ h1{
     border: 1px solid black;
     background-color: rgb(152, 218, 218);
     align-self: flex-end;
-    justify-items: flex-end;
 }
